--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "axios": "^1.8.4",
+    "chalk": "^4.1.2",
     "cheerio": "^1.0.0",
     "express": "^5.1.0"
   }
